--- a/services/config-server/src/main/resources/configurations/notification-service.yml
+++ b/services/config-server/src/main/resources/configurations/notification-service.yml
@@ -16,7 +16,7 @@ spring:
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: '*'
-        spring.json.type.mapping: orderConfirmation:com.elsebaey.ecommerce.kafka.order.OrderConfirmation,paymentConfirmation:com.elsebaey.ecommerce.kafka.payment.PaymentConfirmation
+        spring.json.type.mapping: orderConfirmation:com.ameda.kevin.kafka.order.OrderConfirmation,paymentConfirmation:com.ameda.kevin.ecommerce.kafka.payment.PaymentConfirmation
   mail:
     host: localhost
     port: 1025
