--- a/services/config-server/src/main/resources/configurations/order-service.yml
+++ b/services/config-server/src/main/resources/configurations/order-service.yml
@@ -15,7 +15,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
-        spring.json.type.mapping: orderConfirmation:com.elsebaey.ecommerce.kafka.OrderConfirmation
+        spring.json.type.mapping: orderConfirmation:com.ameda.kevin.ecommerce.kafka.OrderConfirmation
 
 server:
   port: 8070
