--- a/services/config-server/src/main/resources/configurations/payment-service.yml
+++ b/services/config-server/src/main/resources/configurations/payment-service.yml
@@ -21,7 +21,7 @@ spring:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       properties:
-        spring.json.type.mapping: paymentConfirmation:com.elsebaey.ecommerce.notification.PaymentNotificationRequest
+        spring.json.type.mapping: paymentConfirmation:com.ameda.kevin.notification.PaymentNotificationRequest
 
 server:
   port: 8060
